[project]
name = "pypens"
version = "1.0"
description = "Unofficial Python API wrapper for PENS"
readme = "README.md"
authors = [
    { name = "Senophyx", email = "me@senophyx.id" }
]
requires-python = ">=3.9"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "requests>=2.32.5",
]

[build-system]
requires = ["uv_build>=0.10.8,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = '.'
